<resources>
    <string name="app_name">Cricket Scoreboard</string>
    <string name="team_A">Team A</string>
    <string name="team_B">Team B</string>
    <string name="init_score">0</string>
    <string name="boundary">Boundary</string>
    <string name="sixer">Sixer</string>
    <string name="no_ball">No Ball</string>
    <string name="wide_ball">Wide Ball</string>
    <string name="reset">Reset</string>
</resources>
