<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CustomHeader"
                android:text="@string/team_A" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/CustomScoreView"
                android:text="@string/init_score" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addFourForTeamA"
                android:text="@string/boundary" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addSixForTeamA"
                android:text="@string/sixer" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addOneForTeamA"
                android:text="@string/no_ball" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addOneForTeamA"
                android:text="@string/wide_ball" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CustomHeader"
                android:text="@string/team_B" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/CustomScoreView"
                android:text="@string/init_score" />

            <Button
                android:id="@+id/teamBBoundary"
                style="@style/CustomButtonStyle"
                android:text="@string/boundary" />

            <Button
                android:id="@+id/teamBSixer"
                style="@style/CustomButtonStyle"
                android:text="@string/sixer" />

            <Button
                android:id="@+id/teamBNoBall"
                style="@style/CustomButtonStyle"
                android:text="@string/no_ball" />

            <Button
                android:id="@+id/teamBWideBall"
                style="@style/CustomButtonStyle"
                android:text="@string/wide_ball" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="onReset"
        android:text="@string/reset" />
</RelativeLayout>
